--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
             <form id="name-form">
 
-                <div>
+                <div class="form-group">
                     <label for="username">Your Name</label>
-                    <input id="username" name="username" placeholder="Enter Name Here...">
-                    <button id="start-game-button">Start Game</button>
+                    <input id="username" class="form-control" name="username" placeholder="Enter Name Here...">
+                    <button id="start-game-button" class="btn btn-primary">Start Game</button>
 
                 </div>
 
@@ -37,14 +37,14 @@
             </div>
 
             <form id="game-form">
-                <div>
+                <div class="form-group">
                     <label for="user-selection">Select Your Choice</label>
-                    <select id="user-selection" name="user-selection">
+                    <select id="user-selection" class="custom-select" name="user-selection">
                         <option>Rock</option>
                         <option>Paper</option>
                         <option>Scissors</option>
                     </select>
-                    <button id="go-button">Go!</button>
+                    <button id="go-button" class="btn btn-success">Go!</button>
                     <p id="game-history"></p>
                 </div>
             </form>
