Completing game logic and extra credit

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                 <div class="form-group">
                     <label for="username">Your Name</label>
                     <input id="username" class="form-control" name="username" placeholder="Enter Name Here...">
-                    <button id="start-game-button" class="btn btn-primary">Start Game</button>
 
                 </div>
 
-            </form>
+                <button id="start-game-button" class="btn btn-primary">Start Game!</button>
 
+            </form>
 
         </div>
 
         <div id="game-screen">
 
-            <div id="score-talley">
+            <div id="score-tally">
                 <p id="score">User: 0 v CPU: 0</p>
             </div>
 
@@ -44,12 +44,11 @@
                         <option>Paper</option>
                         <option>Scissors</option>
                     </select>
-                    <button id="go-button" class="btn btn-success">Go!</button>
-                    <p id="game-history"></p>
                 </div>
+                <button id="go-button" class="btn btn-success">Go!</button>
+                <button id="reset-game-button" class="btn btn-secondary">Reset</button>
             </form>
-
-
+            <p id="game-history"></p>
         </div>
         
 
